2019-12-20  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2019-12-11  Jakub Jelinek  <jakub@redhat.com>

	PR target/92723
	* gcc.dg/vect/pr92723.c: New test.

	2019-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92831 - CWG 1299, not extending temporary lifetime for ?:
	* g++.dg/cpp0x/temp-extend2.C: New test.

	2019-12-05  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/92781
	* gfortran.dg/pr92781.f90: New test.

	2019-12-04  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/92756
	* gfortran.dg/gomp/teams1.f90: New test.

	2019-12-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92732
	* g++.dg/cpp2a/bitfield3.C: Don't expect narrowing conversion
	warnings.
	* g++.dg/cpp2a/bitfield4.C: New test.

	PR c++/92695
	* g++.dg/cpp2a/constexpr-virtual14.C: New test.

	2019-12-02  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92695
	* g++.dg/cpp2a/constexpr-virtual15.C: New test.

	2019-11-29  Jakub Jelinek  <jakub@redhat.com>

	PR c++/60228
	* g++.dg/gomp/openmp-simd-2.C: Don't expect bodies for
	DECL_OMP_DECLARE_REDUCTION_P functions.

	2019-11-28  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92695
	* g++.dg/warn/inline3.C: New test.

	2019-11-27  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/91944
	* gfortran.dg/spread_size_limit_2.f90: New test.

	PR c++/92524
	* g++.dg/cpp0x/pr92524.C: New test.

	2019-11-26  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92648
	* g++.dg/cpp0x/gen-attrs-71.C: New test.

	PR c++/61414
	* g++.dg/cpp0x/enum23.C: Remove xfail.
	* g++.dg/cpp0x/enum28.C: New test.

	PR tree-optimization/92644
	* g++.dg/opt/pr92644.C: New test.

	2019-11-23  Jakub Jelinek  <jakub@redhat.com>

	PR target/92615
	* gcc.target/i386/pr92615.c: New test.

	2019-11-22  Jakub Jelinek  <jakub@redhat.com>

	PR c/90677
	* c-c++-common/pr90677.c: New test.

	2019-11-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/90842
	* g++.dg/cpp1y/lambda-generic-90842.C: New test.

2019-12-20  Roman Zhuykov  <zhroma@ispras.ru>

	* gcc.dg/pr92951-1.c: Rename to ...